# schedule-board

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  scheduleBoard  scheduleBoardTest
cmake/: safeguards.cmake
include/: CMakeLists.txt  calendar_event.h  config_options.h  schedule_board.h  schedule_client.h
include/client/: central_cinema_schedule_client.h  schedule_client.h
include/clients/: central_cinema_schedule_client.h  schedule_client.h
include/util/: file_utils.h  http_utils.h  string_utils.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  calendar_event.cpp  central_cinema_schedule_client.cpp  config_options.cpp  main.cpp  schedule_board.cpp
src/client/: central_cinema_schedule_client.cpp
src/clients/: central_cinema_schedule_client.cpp
src/util/: file_utils.cpp  http_utils.cpp  string_utils.cpp
test/: CMakeLists.txt
test/client/: central_cinema_schedule_client_unittest.cpp
test/clients/: central_cinema_schedule_client_unittest.cpp
test/data/clients/: central_schedule_201811.html
test/mock/: mock_http_utils.hpp
